--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
         <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
-    <div class="balloons text-center" id="b1">
+    <!-- <div class="balloons text-center" id="b1">
     	<h2 style="color:#F2B300;">x</h2>
-    </div>
+    </div> -->
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">k</h2>
+    	<h2 style="color:#0719D4;">S</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">l</h2>
+    	<h2 style="color:#D14D39;">i</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">p</h2>
+    	<h2 style="color:#8FAD00;">r</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">j</h2>
+    	<h2 style="color:#8377E4;">i</h2>
     </div>
-    <div class="balloons text-center" id="b6">
+    <!-- <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">r</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">t</h2>
+    	<h2 style="color:#20CFB4;">t</h2> -->
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -87,9 +87,9 @@
 				<img src="banner.png" class="bannar">
 			</div>
 		</div>
-		<div class="row message">
+		<!-- <div class="row message">
 			<div class="col-md-12"><p>Shirisha</p></div>
-		</div>
+		</div> -->
 		<div class="row cake-cover">
 			<div class="col-md-12 texr-center">
 				<div class="cake">
@@ -107,6 +107,7 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
+				<p>Hey Siri! :)</p>
 				<p>Today is...</p>
 				<p>as beautiful as other days</p>
 				<p>but you realize</p>
