--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
     </audio>
     <!-- <div class="balloons text-center" id="b1">
     	<h2 style="color:#F2B300;">x</h2>
-    </div> -->
+    </div>
     <div class="balloons text-center" id="b2">
     	<h2 style="color:#0719D4;">S</h2>
-    </div>
+    </div> -->
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">i</h2>
+    	<h2 style="color:#D14D39;">S</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">r</h2>
+    	<h2 style="color:#8FAD00;">i</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">i</h2>
+    	<h2 style="color:#8377E4;">r</h2>
     </div>
-    <!-- <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">r</h2>
+    <div class="balloons text-center" id="b6">
+    	<h2 style="color:#99C96A;">i</h2>
     </div>
-    <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">t</h2> -->
-    </div>
+    <!-- <div class="balloons text-center" id="b7">
+    	<h2 style="color:#20CFB4;">t</h2>
+    </div> -->
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
